--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
 }
 
 /* INPUTS */
-input{
+input, .input{
   font-size: 14pt;
   margin: .5rem;
   padding: .2rem;
@@ -77,6 +77,7 @@ input{
   box-shadow: none;
   outline: none;
   border: none;
+  background-color: #f1f8f7;
 }
 
 button{
@@ -87,4 +88,41 @@ button{
   box-shadow: none;
   outline: none;
   border: none;
+}
+
+.period{
+  background-color: #282c34;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: .5rem;
+  aspect-ratio: 1/2;
+  height: 15rem;
+}
+
+.period p{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.period p:first-child{
+  text-align: center;
+}
+
+.changed{
+  background-color: rgb(163, 97, 53);
+  padding: .2rem;
+  border-radius: .5rem;
+}
+
+.timetable{
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.timetable div{
+  
 }
